2008-04-19  Benhur Stein <benhur@inf.ufsm.br>
    * AggregatingFilter/AggregatingChunkArray.m General/EntityChunk.h
      General/EntityChunk.m PajeEventDecoder/PajeEventDecoder.h
      PajeEventDecoder/PajeEventDecoder.m PajeSimulator/SimulChunk.h
      PajeSimulator/SimulChunk.m: chunk code cleanup

2008-03-07  Benhur Stein <benhur@inf.ufsm.br>
    * General/: correct some #includes

2008-02-21  Benhur Stein <benhur@inf.ufsm.br>
    * SpaceTimeViewer/DrawView.m: register a default size for aggregation

2008-02-21  Benhur Stein <benhur@inf.ufsm.br>
    * Paje/PajeController.m General/NSDate+Additions.m: move locale
      setting to a more global place

2008-02-21  Benhur Stein <benhur@inf.ufsm.br>
    * all GNUmakefile: clean some compiling/linking issues (patches by
      Yavor Doganov and Vincent Danjean)

2007-11-11  Benhur Stein <benhur@inf.ufsm.br>
    * correct some coloring issues

2007-11-06  Benhur Stein <benhur@inf.ufsm.br>
    * better display of fields

2007-11-06  Benhur Stein <benhur@inf.ufsm.br>
    * FieldFilter/FieldFilter.m, ImbricationFilter/InsetLimit.m: add
      missing method enumeratorOfCompleteEntitiesTyped:...

2007-11-06  Benhur Stein <benhur@inf.ufsm.br>
    * remove a log message

2007-11-05  Benhur Stein <benhur@inf.ufsm.br>
    * SpaceTimeViewer/HierarchyRuler.m: correct typo/missing line break

2007-11-03  Benhur Stein <benhur@inf.ufsm.br>
    * better drawing code for variables

2007-11-03  Benhur Stein <benhur@inf.ufsm.br>
    * Clean some compilation warnings; simplify compilation on MacOSX and
      Linux; change installations instructions in README

2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
    * */*.nib: add missing files

2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
    * General/GNUmakefile: define installation domain; General framework
      needs to be installed separately, before compiling Paje
    * README: change installation howto

2007-07-19  Benhur Stein <benhur@inf.ufsm.br>