@@ -25,6 +25,9 @@
 #ifdef GNUSTEP
 #include <values.h>
 #endif
+#ifndef MAXFLOAT
+#define MAXFLOAT 3.402823466e+38F
+#endif
 
 #include "../General/Association.h"
 #include "../General/Macros.h"
